syntax = "proto3";

package ortoo;

message ObjectId {
  bytes value = 1;
}

message BSONObject {
  string json = 1;
  bytes value = 2;
}
